# Testing

./: README.html  README.md  log.txt  pyproject.toml
examples/: microstrip_post_mesh_2.toml  test_comparison.txt  test_example.toml  test_example_2.toml  test_example_3.toml  test_example_4.toml  test_failing_relative.toml  test_failing_setup.toml  test_input.txt  test_microstrip_post_mesh_2.toml  test_successful_file_comparison_absolute.toml  test_successful_file_comparison_relative.toml
src/: base.py  impl.py  log.txt  main.py  toml_parser.py
