[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["SV-97 <volzstefan97@googlemail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
